@@ -3,3 +3,4 @@ IORING_ENTER_GETEVENTS
 IORING_ENTER_SQ_WAKEUP
 IORING_ENTER_SQ_WAIT
 IORING_ENTER_EXT_ARG
+IORING_ENTER_REGISTERED_RING
