@@ -40,3 +40,4 @@ IORING_OP_UNLINKAT
 IORING_OP_MKDIRAT
 IORING_OP_SYMLINKAT
 IORING_OP_LINKAT
+IORING_OP_MSG_RING
