@@ -11,3 +11,4 @@ IORING_FEAT_EXT_ARG
 IORING_FEAT_NATIVE_WORKERS
 IORING_FEAT_RSRC_TAGS
 IORING_FEAT_CQE_SKIP
+IORING_FEAT_LINKED_FILE
