@@ -6,3 +6,4 @@ IORING_SETUP_CQSIZE
 IORING_SETUP_CLAMP
 IORING_SETUP_ATTACH_WQ
 IORING_SETUP_R_DISABLED
+IORING_SETUP_SUBMIT_ALL
